# mogakko-bot

./: .gitattributes  .gitignore  .sample.env  Cargo.toml  Dockerfile  README.md  compose.yaml  init.sh
migrations/: 20241005132758_init.sql
scripts/: drop-all.sql
src/: bot.rs  config.rs  db.rs  lib.rs  main.rs  utils.rs
src/queries/: find-lock.sql  is-first-time-today.sql  is_first_time_today.sql  join.sql  leaderboard.sql  leave.sql  lookup.sql  statistics-calendar.sql  statistics.sql
