[package]
name = "mogakko-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
dotenvy = "0.15.7"
serenity = { version = "0.12.2", features = ["cache", "utils"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
time = { version = "0.3.36", features = ["local-offset", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-cron = "0.1.3"
chrono = "0.4.38"
log = "0.4.22"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
